Se realizaron cambios de funcionamiento
# Conflicts:
#	src/main/java/com/charizad/compiled/gamification_service/infrastructure/adapters/persistence/mapper/UserGamificationDocumentMapper.java